# Nextron

./: CMakeLists.txt  README.md  buildcmd.txt  main.cpp  map_gen.cpp  sh_compile_command  test.cpp
assets/shaders/: vertex.glsl
engine/core/: Window.cpp  Window.h
engine/graphics/: Renderer.cpp  Renderer.h
engine/input/: Input.cpp  Input.h
include/: dungeon_generator.hpp  game.hpp  main.hpp  structs.hpp
include/glad/: glad.h
lib/cmake/SDL3/: SDL3ConfigVersion.cmake
src/: dungeon_generator.cpp  game.cpp  glad.c  main.cpp  main_beta_ffmpeg.cpp
